マスターアップ

--- a/vc2015/TemplateProject.vcxproj
+++ b/vc2015/TemplateProject.vcxproj
@@ -220,13 +220,16 @@
     <ClCompile Include="..\src\WorldObject\CharacterBase.cpp" />
     <ClCompile Include="..\src\WorldObject\Effect\EffectBase.cpp" />
     <ClCompile Include="..\src\WorldObject\Effect\EffectBlackBox.cpp" />
+    <ClCompile Include="..\src\WorldObject\Effect\EffectBossDeath.cpp" />
     <ClCompile Include="..\src\WorldObject\Effect\EffectBossName.cpp" />
     <ClCompile Include="..\src\WorldObject\Effect\EffectColored.cpp" />
     <ClCompile Include="..\src\WorldObject\Effect\EffectColorShot.cpp" />
     <ClCompile Include="..\src\WorldObject\Effect\EffectExplodeburst.cpp" />
     <ClCompile Include="..\src\WorldObject\Effect\EffectExplosion.cpp" />
+    <ClCompile Include="..\src\WorldObject\Effect\EffectFlashBack.cpp" />
     <ClCompile Include="..\src\WorldObject\Effect\EffectItem.cpp" />
     <ClCompile Include="..\src\WorldObject\Effect\EffectStar.cpp" />
+    <ClCompile Include="..\src\WorldObject\Effect\EffectWorldClear.cpp" />
     <ClCompile Include="..\src\WorldObject\Enemy.cpp" />
     <ClCompile Include="..\src\WorldObject\Information.cpp" />
     <ClCompile Include="..\src\WorldObject\ItemObject.cpp" />
@@ -358,13 +361,16 @@
     <ClInclude Include="..\src\WorldObject\CharacterBase.h" />
     <ClInclude Include="..\src\WorldObject\Effect\EffectBase.h" />
     <ClInclude Include="..\src\WorldObject\Effect\EffectBlackBox.h" />
+    <ClInclude Include="..\src\WorldObject\Effect\EffectBossDeath.h" />
     <ClInclude Include="..\src\WorldObject\Effect\EffectBossName.h" />
     <ClInclude Include="..\src\WorldObject\Effect\EffectColored.h" />
     <ClInclude Include="..\src\WorldObject\Effect\EffectColorShot.h" />
     <ClInclude Include="..\src\WorldObject\Effect\EffectExplodeburst.h" />
     <ClInclude Include="..\src\WorldObject\Effect\EffectExplosion.h" />
+    <ClInclude Include="..\src\WorldObject\Effect\EffectFlashBack.h" />
     <ClInclude Include="..\src\WorldObject\Effect\EffectItem.h" />
     <ClInclude Include="..\src\WorldObject\Effect\EffectStar.h" />
+    <ClInclude Include="..\src\WorldObject\Effect\EffectWorldClear.h" />
     <ClInclude Include="..\src\WorldObject\Enemy.h" />
     <ClInclude Include="..\src\WorldObject\Information.h" />
     <ClInclude Include="..\src\WorldObject\ItemObject.h" />
